Review documentation + Upgrade to Java 11 + Remove commons-lang library